회원 엔티티 및 테스트 만들기, JPA 테스트, 테스트 Fixture 정의, 엔티티 식별자 정의

--- a/개발생각.md
+++ b/개발생각.md
@@ -35,3 +35,26 @@
   - 결국 도메인 레이어에서 필요한 기능이기 때문에 
   - 해당 인터페이스를 도메인에 두는 것이 맞음.
 
+
+# Entity
+- 어떤 대상을 엔티티라고 부르려면 식별자를 가져야하는 것이 기본 조건
+  - Member의 경우 email이 식별자가 됨. 이게 최선일까?
+## 엔티티 식별자가 되기 위한 기준
+- 고유성 (두 개의 엔티티가 같은 값을 가지면 안 됨)
+- 불변성 (한번 값이 할당되면 엔티티의 생명주기 동안 절대 변경되면 안 된다.)
+  - 이를 참조 정합성이 훼손되고, 연관관계를 깨뜨린다.
+- 비즈니스적인 의미로부터 디커플링 되는 것이 좋다.
+> 따라서 이메일은 불변성을 깨뜨릴 수 있고, 비즈니스적인 의미가 강하기 때문에 식별자로 적합하지 않음
+- 따라서 자연 키 대신 인조키(대리 키) 사용
+
+## 도메인의 엔티티에 Jpa 관련 어노테이션을 붙이는 것
+- 어노테이션은 그냥 주석일 뿐 의존성에 영향을 끼치지 않음
+- 특정 기술에 종속적인 코드가 되지 않는다는 것.
+- JPA를 안 쓰고 다른 기술을 쓴다고 해서 이 어노테이션이 문제가 되지 않음.
+- 컴파일할때는 JPA 인터페이스가 필요하겠지만,, 런타임에서는 전혀 문제가 안 됨
+
+
+# DataJpaTest
+- Spring의 모든 빈을 다 띄우는게 아니라 Data Jpa가 동작할 수 있는 최소한의 빈들로만 구성해서 띄워줌
+- 데이터베이스 연결을 기본적으로 h2 embedded DB를 사용해 메모리안에서 돌아가기때문에 DB를 따로 셋업 안해도 되고 굉장히 빠름
+- jpa 표준을 따라 portable하게 만들어진 repository라면 이거 사용하면 됨.
