NaturalId, NaturalIdCache 로 자연키 제약조건 해결

--- a/개발생각.md
+++ b/개발생각.md
@@ -58,3 +58,9 @@
 - Spring의 모든 빈을 다 띄우는게 아니라 Data Jpa가 동작할 수 있는 최소한의 빈들로만 구성해서 띄워줌
 - 데이터베이스 연결을 기본적으로 h2 embedded DB를 사용해 메모리안에서 돌아가기때문에 DB를 따로 셋업 안해도 되고 굉장히 빠름
 - jpa 표준을 따라 portable하게 만들어진 repository라면 이거 사용하면 됨.
+
+# 비즈니스 적으로 유니크해야하는 자연키
+- jpa 표준은 아니지만 hibernate 에서 지원하는 @NaturalId 어노테이션을 쓰면 unique 제약을 확인함
+- 테스트 같은데서 자동으로 데이터베이스를 만드는 작업을 할때도 유니크 제약조건이 걸림
+- @NaturalIdCache 는 자연 키 NaturalId를 캐싱해서 같은 같은 아이디 값을 가지고 한번 읽어온 것을 한번 더 읽어오면, DB에서 조회하지 않고 영속 컨텍스트에서 바로 꺼내올 수 있음.
+  - NaturalId 를 적용했기 때문에 가능
