--- a/개발생각.md
+++ b/개발생각.md
@@ -64,3 +64,23 @@
 - 테스트 같은데서 자동으로 데이터베이스를 만드는 작업을 할때도 유니크 제약조건이 걸림
 - @NaturalIdCache 는 자연 키 NaturalId를 캐싱해서 같은 같은 아이디 값을 가지고 한번 읽어온 것을 한번 더 읽어오면, DB에서 조회하지 않고 영속 컨텍스트에서 바로 꺼내올 수 있음.
   - NaturalId 를 적용했기 때문에 가능
+
+# Lombok 사용에 대해서
+- Lombok 사용하는 것을 싫어하는 사람이 많음
+  - 왜? 이 롬복 어노테이션이 어떤 코드를 만드는지 몰라 이로 인해 사이드 이펙이 생길 수 있기 때문
+  - 롬복이 어떤 코드를 만드는지 잘 인지하고 개발하자
+
+# Application 서비스를 만들때
+- 처음에 메소드를 구현할때 이 흐름(Flow)를 따라가기 위한 주석은 괜찮음.
+- 중요한 것
+  - 도메인은 도메인 모델을 설계하고 문서도 만들고 다이어 그램도 만들고 한것을 잘 반영했는가?
+  - 애플리케이션 서비스는 실제로 서비스에서 사용하는 주요한 작업들을 어떤 절차를 거쳐 이 기능을 수행하는가? 누구와 협력을 하는가?가 코드 안에서 잘 읽힐 수 있어야함
+- 시간이 지나 이 코드를 보며 애플리케이션 로직을 말로 잘 풀어낼 수 있으면 좋을 코드임
+- 신경쓸 것
+  - 앞으로 이러한 provided interface가 점점 더 늘어날 것인데
+  - 회원과 관련해서 어떤 의도를 가지고 이 시스템을 쓰겠다라고 하면 이를 사용하는 클라이언트도 그 용도에 따라 여러가지로 분리될 수 있음
+  - 인터페이스를 만들지 않고 클래스 하나만 만드는 경우 회원과 관련된 모든 기능들이 하나에 다 담기게 됨.
+    - 따라서 이러한 기능을 분리하는 기준을 만들어야함
+    - 의도에 따라 기능을 분리한 provided interface를 많이 이용하자.
+- 계층형 아키텍처에서 한 계층이 다른 계층을 접근할때 인터페이스를 통해 접근한다 -> 당연한 것
+ 
