--- a/개발생각.md
+++ b/개발생각.md
@@ -84,3 +84,42 @@
     - 의도에 따라 기능을 분리한 provided interface를 많이 이용하자.
 - 계층형 아키텍처에서 한 계층이 다른 계층을 접근할때 인터페이스를 통해 접근한다 -> 당연한 것
  
+# Application 테스트에 대하여
+- provided interface에 대해 테스트를 진행
+- 테스트를 진행하기 위해 required interface를 테스트해야함
+  - repository -> memory db
+  - 실제로 구현이 필요한 것, 리턴 객체가 필요한 것
+    - stub, mock을 만들어 테스트
+    - 몇번 호출되었는가? 등으로 간단한 테스트 가능
+- 일반적으로 테스트는 구현에 대해서 하는 것이 아닌 인터페이스에 대해서 하는 것
+  - 테스트를 통해 클래스, 기능을 쪼개는게 가능
+- 기능이 달라지면 테스트도 같이 바뀌어야함
+  - 그러나 기능이 크게 바뀌지 않았는데 리팩토링을 통해 테스트를 많이 바꿔야한다면 테스트 대상 설정을 잘못한게 아닌가 생각해야함
+- 헥사고날 아키텍처, 스프링을 사용한다면 무조건 테스트해야함
+  - 테스트가 용이한 아키텍쳐이기 때문
+  - 클린코드에서도 강조하는 사항
+
+## 테스트
+- Stub
+  - 아무 기능 없이 그냥 단순 구현 (아무 작업도 안함)
+- Mock
+  - Stub과 비슷하게 아무 기능이 없지만, 메소드 호출이나 호출 데이터 검증 등의 작업을 수행해야함
+- Mockito
+  - Mock 생성을 도와주는 테스트를 위한 라이브러리
+
+### Spring Test
+- 매번 Stub을 정의하여 테스트하는 것은 상당히 번거롭다.
+- 그래서 스프링 프레임워크를 이용하여 최소한의 구성요소만 올려 간편하게 테스트 가능
+- 테스트용 빈을 등록 하여 required interface를 구성 가능 
+- 스프링 컨테이너가 동작하는 방식으로 테스트를 만드는게 애플리케이션 테스트에서는 훨신 편리하다.
+  - 메뉴얼 테스트도 필요할수도 있음
+  - 대부분의 경우에는 컨테이너를 띄우는 방식의 테스트가 훨씬 나음
+  - 시간이 조금 더 걸리지만 최적화가 잘되어있음
+
+### 테스트 코드에서의 Autowired
+- Autowired 필드주입은 테스트 코드에서는 사용해도 상관 없음
+- Autowired 가 많아질수록 코드가 많아지고 시선이 뺏김
+  - 그래서 요즘은 테스트를 record로 만듦
+    - Junit 공식 문서에 가능하다고 적혀 있음.
+- 단 이를 사용하기 위해서 @TestConstructor 사용 해야함
+  - 이조차 자동화하기 위해서 spring.test.constructor.autowire.mode=all 를 resources에 저장
