--- a/개발생각.md
+++ b/개발생각.md
@@ -123,3 +123,32 @@
     - Junit 공식 문서에 가능하다고 적혀 있음.
 - 단 이를 사용하기 위해서 @TestConstructor 사용 해야함
   - 이조차 자동화하기 위해서 spring.test.constructor.autowire.mode=all 를 resources에 저장
+
+## 서비스단의 흐름
+- 진입점에 대한 버플릭 메소드에서는 추상적인 레벨로 안에서 어떤 작업이 일어난다 정도만 명시하는 것이 좋다.
+- 메소드에는 동일 레벨의 로직이 있어야함. 하나라도 레벨이 어긋나면 잘못된 것.
+
+## 서비스단의 검증에 대해서 (MemberService)
+- MemberRegisterRequest 의 경우 입력에 대한 검증이 필요함
+- 이 입력값은 Controller 단에서도 검증이 일어나고 도메인 레벨에서도 검증이 일어남
+- Service 단에서도 검증이 필요한가?
+  - 아무리 앞에서 검증을 잘 만들거라고 해도 신뢰하면 안됨
+  - 도메인에서는 도메인 레벨에서의 최소한의 검증만 함
+  - 애플리케이션으로 만들어지고 적용될때는 더 엄밀한 규칙들이 적용이 될 것
+- 따라서 애플리케이션 레이어에서 검증을 하는 것이 제일 좋음.
+- 입력 검증은 어디서 하는게 좋을까?
+  - 입력 모델 내부에서 검증하는 것이 좋다!!
+- Record에는 레코드 헤더에 정의된 값들을 가지고 검증할 수 있음
+  - 컴팩트 캐노니컬 컨스트럭터를 통해 검증 로직 수행 가능
+  - 그러나 이렇게 코드레벨로 하는것 보다,,,
+- 어노테이션으로 선언적으로 하는 자바 표준을 사용하자
+  - JSR-303 Bean Validation 규약
+  - 이걸 검증하려면 이를 지원하는 프레임워크가 필
+    - 스프링과 하이버네이트가 대표적임
+
+### 표준 어노테이션을 통해 검증할 수 없는 조건들은 어떻게 해야할까?
+- 2가지 방법이 있을 듯
+- 표준 자바 밸리데이션 기능을 수행 가능하도록 커스텀 애노테이션 만들어 검증로직 부여
+- 레코드에 생성자를 이용해 밸리데이션 하는 로직을 코드로 작성
+  - 혹은 validate 메소드를 만들어서 애플리케이션 서비스에서 실행해주는 방식으로 해결
+
