--- a/개발로그.md
+++ b/개발로그.md
@@ -152,3 +152,40 @@
 - 레코드에 생성자를 이용해 밸리데이션 하는 로직을 코드로 작성
   - 혹은 validate 메소드를 만들어서 애플리케이션 서비스에서 실행해주는 방식으로 해결
 
+## Test Class도 record로 만들 수 있음
+- 대신 @TestConstructor(autowireMode = TestConstructor.AutowireMode.ALL)
+  - 를 붙여줘야한다는 단점이 있으나, 이건 junit-platform.properties 설정을 통해 전역적으로 적용 가능
+    - spring.test.constructor.autowire.mode=all
+
+## Spring 프레임워크에서 지원하는 JPA에는 왜 save() 메소드가 있는가
+- 업데이트 상황에서도 save()를 호출해야함
+  - 왜냐면 jpa만 적용되는 기능이 아니라 다양한 종류의 데이터 저장 기술을 지원하기 위해..
+- 이 기술의 목적은 Repository를 추상화하기 위한 것.
+  - 다른 저장기술을 사용하는 것과 동일하게 jpa에서도 save()를 호출해야함
+  - jpa가 아닌 다른 저장 기술에도 범용적으로 추상화 하기 위한 것
+- save를 진행하지 않으면? 
+  - 스프링 데이터가 지원하는 기능 중 Domain Event Publication 이 일어나지 않음
+    - 따라서 항상 업데이트를 할때도 세이브하는 습관을 들이자.
+  - Auditing도 일어나지 않음
+
+## 기능별로 인터페이스를 만들어라
+- MemberRegister, MemberFinder 처럼 역할과 기능별로 인터페이스를 만들고 이를 구현하는 것이 좋다.
+  - 변경과 조회 그리고 등록은 각각 다른 기능이다.
+  - 하나에 모두 넣으면,,, 나중에 클래스가 너무 커짐
+  - 분리 -> 리팩터링 = 테스트
+    - 테스트는 인터페이스 단위로..
+- findById로 주로 객체를 찾지만 이런 경우에 파라미터로 그냥 Long이 온다면 find(Long id)로 만든다고 함
+- 조회 로직과 변경 로직을 담당하는 클래스도 분리하고 싶음
+  - 왜? -> 시간이 지나면서 서로 의존하는 오브젝트들이 점점 달라지기 때문..
+  - 변경없이 조회만하는 기능과 변경이 일어나는 기능 두가지로 구분하면 좋을 듯.
+    - 이런 컨셉을 잘 설명하는 객체지향적 원리 **CQS(Command Query Separation)**
+      - 그러나 Command는 너무 강한 표현이니... 이걸 Modify로 순화
+    - 조회 - MemberQueryService
+    - 변경 - MemberModifyService 
+
+## 리팩토링 이후에는 항상 변경된 코드들을 보고 더 개선지점이 없는지 파악해보자.
+- 테스트 커버리지도 확인해보자.
+- 커버리지 체크 -> run test with coverage로 확인 가능
+  - 테스트 커버리지는 100% 만드는거에 집착하지 말자.
+  - 리스크가 있는 코드에 대해서 반드시 작성하기만 하면 됨
+
